# Mario

./: .gitignore  2026OOPL_Final.md  AGENTS.md  BUG_REPORT_AND_FIX_PLAN.md  CMakeLists.txt  JSON_LEVEL_TUTORIAL.md  PHASE2_FIX_PLAN.md  Proposal.md  README.md  files.cmake  座標文件.md  架構分析報告.md  潛在問題與半成品清單.md  繼承圖.txt
Asset/image/stage/: 1-1.csv  1-1.json  1-1.psd  1-1.txt  1-1_ground.psd  1-1_underground.psd  1-2_ground-1.psd  1-3.psd
Asset/image/stage/tileMapEditor/: 1-1.tiled-session  1-1.tmx
ExportedSprites/: SPRITE_GUIDE.md  manifest.json
Known_isseues/: 1-1.md  1-2.md  1-3.md  all.md  editor.md  global.md
Resources/: AGENTS.md  README.md
Resources/Asset/: sprites.csv
Resources/Asset/player/LuigiSprites/: manifest.json
Resources/data/: 1-1.json  1-1_ground_1.json  1-1_legacy_unused.json  1-1_underground.json  1-1_underground_1.json  1-2_ground_1.json  1-2_ground_2.json  1-2_underground_1.json  1-2_underground_2.json  1-3_ground_1.json  tutorial.json
Resources/levels/: 1-1.json  1-1.txt  LEVEL_FORMAT.md
_legacy/: AGENTS.md
_legacy/include/: App.hpp  AssetCatalog.hpp  Block.hpp  Collision.hpp  Enemy.hpp  Entity.hpp  Player.hpp
_legacy/levels/: 1-1.json  LEVEL_FORMAT.md  README.md
_legacy/src/: AppStart.cpp  AssetCatalog.cpp  BackgroundRenderer.cpp  Block.cpp  CroppedImage.cpp  Enemy.cpp  Level.cpp  LevelSkeletonMain.cpp  Map.cpp  ObjectRenderer.cpp
build-codex/: CMakeCache.txt
build-level-skeleton/: CMakeCache.txt
cmake/: PatchPTSD.cmake  config.hpp.in
data/: 1-1.json  1-1_underground.json  tutorial.json
include/: AGENTS.md  App.hpp  AssetCatalog.hpp  AssetPath.hpp  AudioManager.hpp  Background.hpp  BackgroundRenderer.h  Block.hpp  BrickBlock.hpp  BrickDebris.hpp  Camera.hpp  Character.hpp  ClipDrawable.hpp  CoinItem.hpp  Collision.hpp  CollisionSystem.h  CollisionUtils.hpp  CroppedImage.hpp  Enemy.hpp  FireFlowerItem.hpp  Fireball.hpp  FlagBlock.hpp  Game.hpp  GameConstants.hpp  GameLogger.hpp  GameManager.hpp  GameSession.hpp  Goomba.hpp  GroundBlock.hpp  HUD.hpp  HiddenBlock.hpp  IRenderer.h  Item.hpp  Koopa.hpp  KoopaParatroopa.hpp  Level.hpp  LevelCoinItem.hpp  LevelData.hpp  LevelLoader.h  LevelLoader.hpp  (+16 more)
include/Util/: ImagePath.hpp
src/: AGENTS.md  App.cpp  AppUpdate.cpp  AssetCatalog.cpp  AudioManager.cpp  Background.cpp  Block.cpp  BrickBlock.cpp  BrickDebris.cpp  Camera.cpp  Character.cpp  ClipDrawable.cpp  CoinItem.cpp  Collision.cpp  CollisionSystem.cpp  Enemy.cpp  Entity.cpp  FireFlowerItem.cpp  Fireball.cpp  FlagBlock.cpp  Game.cpp  GameLogger.cpp  GameManager.cpp  GameSession.cpp  Goomba.cpp  GroundBlock.cpp  HUD.cpp  HiddenBlock.cpp  Item.cpp  Koopa.cpp  KoopaParatroopa.cpp  LevelCoinItem.cpp  LevelLoader.cpp  Map.cpp  MovingPlatformBlock.cpp  MultiCoinBlock.cpp  MushroomItem.cpp  OneUpMushroomItem.cpp  PipeBlock.cpp  PiranhaPlant.cpp  (+7 more)
tests/: KoopaBehaviorTest.cpp
更新的map/1-1/: project.json
更新的map/1-2/: project.json  project.json.bak_before_merge_1-2_ground_1
更新的map/1-3/: project.json
